--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,10 @@ RUN /bin/bash /root/install_graphite.sh
 COPY install_grafana.sh /root/
 RUN /bin/bash /root/install_grafana.sh
 
-COPY startup.sh /root/
+# copy monitor config system
+COPY monitor /root/
+COPY setup_monitor_config_system.sh /root/
+RUN /bin/bash /root/setup_monitor_config_system.sh
 
+COPY startup.sh /root/
 CMD ["/bin/bash", "/root/startup.sh"]
