--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,15 @@
 FROM ubuntu:14.04
 
+# localize
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN locale-gen zh_CN.UTF-8 &&\
+  DEBIAN_FRONTEND=noninteractive dpkg-reconfigure locales
+RUN locale-gen zh_CN.UTF-8  
+ENV LANG zh_CN.UTF-8  
+ENV LANGUAGE zh_CN:zh  
+ENV LC_ALL zh_CN.UTF-8 
+
 COPY install_nagios.sh /root/
 RUN /bin/bash /root/install_nagios.sh
 
@@ -9,6 +19,8 @@ RUN /bin/bash /root/install_graphite.sh
 COPY install_grafana.sh /root/
 RUN /bin/bash /root/install_grafana.sh
 
+RUN apt-get install -y python-setuptools libmysqlclient-dev python-mysqldb vim && easy_install pip
+ 
 # copy monitor config system
 COPY monitor /root/monitor
 COPY setup_monitor_config_system.sh /root/
