--- a/monitor/docs/nagios_config_example.cfg
+++ b/monitor/docs/nagios_config_example.cfg
@@ -10,7 +10,6 @@ define host{
     _graphiteprefix                 Monitor
 }
 
-
 define service {
     use                             generic-service
     host_name                       mitaka
@@ -21,3 +20,26 @@ define service {
     _graphiteprefix                 Monitor.vm.cpu_util
 }
 
+
+### host group
+define hostgroup {
+    hostgroup_name  oracle-servers
+    alias           the servers run oracle
+    members         server1,server2
+}
+define hostgroup {
+    hostgroup_name  ibm-servers
+    alias           the servers run ibm
+}
+define host{
+    use                             generic-host
+    host_name                       sk
+    alias                           sk
+    hostgroup                       ibm_servers
+    address                         10.10.1.82
+    max_check_attempts              5
+    check_period                    24x7
+    notification_interval           30
+    notification_period             24x7
+    _graphiteprefix                 Monitor
+}
