--- a/monitor/docs/nagios_config_example.cfg
+++ b/monitor/docs/nagios_config_example.cfg
@@ -1,7 +1,8 @@
+### host
 define host{
     use                             generic-host
-    host_name                       sk
-    alias                           sk
+    host_name                       client1
+    alias                           client1
     address                         10.10.1.82
     max_check_attempts              5
     check_period                    24x7
@@ -9,15 +10,27 @@ define host{
     notification_period             24x7
     _graphiteprefix                 Monitor
 }
+define host{
+    use                             generic-host
+    host_name                       client2
+    alias                           client2
+    address                         10.10.1.83
+    max_check_attempts              5
+    check_period                    24x7
+    notification_interval           30
+    notification_period             24x7
+    _graphiteprefix                 Monitor
+}
+
 
 define service {
     use                             generic-service
-    host_name                       mitaka
-    service_description             check-vm
-    check_command                   check_vm
+    host_name                       client1
+    service_description             nrpe_check_load
+    check_command                   nrpe_check_load
     notifications_enabled           0
-     normal_check_interval           1
-    _graphiteprefix                 Monitor.vm.cpu_util
+    normal_check_interval           1
+    _graphiteprefix                 Monitor.physical.cpu_load
 }
 
 
@@ -25,21 +38,24 @@ define service {
 define hostgroup {
     hostgroup_name  oracle-servers
     alias           the servers run oracle
-    members         server1,server2
+    members         client1,client2
 }
-define hostgroup {
-    hostgroup_name  ibm-servers
-    alias           the servers run ibm
+
+##
+define command {
+command_name nrpe_check_load
+command_line $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_load
 }
-define host{
-    use                             generic-host
-    host_name                       sk
-    alias                           sk
-    hostgroup                       ibm_servers
-    address                         10.10.1.82
-    max_check_attempts              5
-    check_period                    24x7
-    notification_interval           30
-    notification_period             24x7
-    _graphiteprefix                 Monitor
+define command {
+command_name mycheck_disk
+command_line $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_hda1
+}
+
+define command {
+command_name check_vm
+command_line /usr/bin/python /usr/lib/nagios/plugins/check_vm.py
+}
+define command {
+command_name foobar
+command_line /bin/cat /usr/lib/nagios/plugins/check_vm.py
 }
