--- a/monitor/docs/nagios_config_example.cfg
+++ b/monitor/docs/nagios_config_example.cfg
@@ -59,3 +59,16 @@ define command {
 command_name foobar
 command_line /bin/cat /usr/lib/nagios/plugins/check_vm.py
 }
+
+define command {
+  command_name check_ganglia
+  command_line $USER1$/check_ganglia -h $HOSTADDRESS$ -m $ARG1$ -w $ARG2$ -c $ARG3$
+}
+define service {
+    use                             generic-service
+    host_name                       nrpe-82
+    service_description             ganglia_check_load
+    check_command                   check_ganglia!load_one!4!5
+    normal_check_interval           1
+    _graphiteprefix                 Monitor.physical.load_one
+}
