--- a/monitor/docs/nagios_config_example.cfg
+++ b/monitor/docs/nagios_config_example.cfg
@@ -72,3 +72,11 @@ define service {
     normal_check_interval           1
     _graphiteprefix                 Monitor.physical.load_one
 }
+define service {
+    use                             generic-service
+    host_name                       local
+    service_description             check_openstack_vm
+    check_command                   check_vm!f0bb0224-dab6-4531-bf63-94fe2d5b7686!cpu_util
+    normal_check_interval           1
+    _graphiteprefix                 Monitor.vm.f0bb0224-dab6-4531-bf63-94fe2d5b7686
+}
